[package]
name = "tmdb-api"
description = "Yet another TMDB client. This one is using async methods."
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jdrouet/tmdb-api"
license = "MIT"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration = []

[dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "tokio-rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
mockito = { version = "0.31" }
serde_json = { version = "1.0" }
tokio = { version = "1.21", features = ["full"] }