[package]
name = "tmdb-api"
description = "Yet another TMDB client. This one is using async methods."
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
version = "0.3.3"
edition = "2021"
repository = "https://github.com/jdrouet/tmdb-api"
license = "MIT"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["commands"]
commands = ["dep:async-trait", "dep:reqwest"]

# only used for testing
integration = []

[dependencies]
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
    "tokio-rustls",
], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }

[dev-dependencies]
mockito = { version = "0.31" }
serde_json = { version = "1.0" }
tokio = { version = "1.24", features = ["full"] }
