[package]
name = "tmdb-api"
description = "Yet another TMDB client. This one is using async methods."
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
version = "0.9.1"
edition = "2024"
repository = "https://github.com/jdrouet/tmdb-api"
license = "MIT"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["commands"]
commands = ["dep:reqwest"]

# only used for testing
integration = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "std",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
thiserror = { version = "1.0" }

[dev-dependencies]
mockito = { version = "1.4" }
serde_json = { version = "1.0" }
tokio = { version = "1.38", features = ["full"] }
